\name{NEWS}
\title{lfe news}


\section{Changes in version 2.8-6}{
  \itemize{
   \item Package is archived from CRAN and temporarily adopted by Matthieu Stigler.
   \item Use now doi function 
   \item CRAN request: do not use 'dontrun' or 'donttest'
   \item CRAN request: remove <<-
   \item CRAN request: reset options to defaults
   \item CRAN request: use at most 2 cores in examples tests etc
   \item Change code in waldtest.R to be more robust to variable ordering with multi-way clustering, as suggested by @grantmcdermott
   \item Accept Pull request "Catch duplicate (false) reference levels for interacted FEs" @grantmcdermott
   \item Fix a sprintf issue, apparently \code{sprintf('\%.8e', 1)} is not legal in future R -devel.
   \item Backport changes by CRAN maintainers (2.8.5-1): remove \code{all.tests=TRUE} in \code{parallel::detectCores()}
   \item Backport changes by CRAN maintainers (2.8.5-1): delete file \code{examples/lfe-Ex.Rout.save}
   \item Fix a few typos with \code{devtools::spell_check()}
   \item Added an internal \code{devtools_internal.R} with few testing calls.
  }
}
\section{Changes in version 2.8-5}{
  \itemize{
    \item Corrected the vignette about estimable functions. The 
    change in the \code{base::sample()} function made the examples meaningless, and I
    forgot to fix it in 2.8-3.
  }
}
\section{Changes in version 2.8-4}{
  \itemize{
    \item Support for nested clusters and reghdfe-option by Grant McDermott and Karl
    Dunkle Werner.
    \item Changed some extern declarations in the C-code to comply with
    standards enforced by the upcoming gcc10.
    \item Changed inner workings of the \code{unnamed()} and
    \code{demeanlist()} functions so they
    still conserve some memory with the new reference count machinery.
  }
}

\section{Changes in version 2.8-3}{
  \itemize{
    \item Fixed a bug in Crowsum which prevented computation of clustered standard
    errors in large datasets (rows x covariates exceeds 2