@@ -1,4 +1,4 @@
-72170dbaffe1e977b4a8750ec484472a *DESCRIPTION
+f37f64dc8e96b54014947a0b6644da8f *DESCRIPTION
 08ee7a9ce3653ef6801eb3370ec44613 *NAMESPACE
 f4e025303cfcd5c09c31bbb14692d656 *R/bccorr.R
 31148fa6afc9ba967d147bf62f119f0a *R/btrap.R
@@ -25,29 +25,29 @@ dc383fefb67bb7b4115867d17c0090ef *R/waldtest.R
 c9671feb88339208a8c34c54ac7a6eef *build/autoconf/config.guess
 83033bdc5ec203b69a7046b5cb2b4522 *build/autoconf/config.sub
 bac3fb7f33d1f10f02f0b6460d2eee12 *build/autoconf/install-sh
-ccadd29eb0a52bf0f622822fa6b384e5 *build/partial.rdb
-cd32c2b34afcead05141e652841ecce9 *build/vignette.rds
+89d1e6cc01f5d80f422a8f87fa09d576 *build/partial.rdb
+372fa041b69c657c38a1dbae07694c98 *build/vignette.rds
 e9d39ec9e298fc7f0ac2c0f294d6d5e0 *cleanup
 f172b62ee6d6c5a250c4063b0186e11a *configure
 ec3cbc5bd3ec0534c7eface326b57c39 *configure.ac
 d41d8cd98f00b204e9800998ecf8427e *configure.win
 8622c18c13769d142f602d9688be2b4d *exec/lfescript
 4e47c1a8b83e82753a85ee5a2ecfd86b *inst/CITATION
-8f9a3327fd43c683642ff626d81cee5c *inst/NEWS.Rd
+0597bd23e7f5d687ccaa61011c51dbca *inst/NEWS.Rd
 1ac948c01ab3f918349d000af4ea118e *inst/TODO
 a754c9dbb8270e3d05375ffa8f471e51 *inst/WORDLIST
-df1fc87868d8ee2ce71a4a4959b94c2f *inst/devtools_internal.R
+933182e7e015beaf76bcc13c9ba1834a *inst/devtools_internal.R
 b86f6fc78c2bb2c3794b501ab55dd133 *inst/doc/biascorrection.Rnw
-6fe429902e68024fc674c3b0f20dae60 *inst/doc/biascorrection.pdf
+771789d819b2d8eae4a898500c9c4679 *inst/doc/biascorrection.pdf
 7fbdf3321135222981b12cf5ca86d1b2 *inst/doc/identification.R
 4ebe39bc2381c354815ef03ee17acdb1 *inst/doc/identification.Rnw
-e9f4a3a50c22d9de5e860daca4d3350b *inst/doc/identification.pdf
+469fd88261acde30b568681d6c39908a *inst/doc/identification.pdf
 a57e1af0f1ab1505cfc82263d167ef84 *inst/doc/lfehow.R
 2d40895042b40d1bea8b59084440941d *inst/doc/lfehow.Rnw
-d377bd85e3be1f390f8a585f7137a5cc *inst/doc/lfehow.pdf
+c296971c431ee5b1bfeec03e8213d779 *inst/doc/lfehow.pdf
 0c867dd954a42dfb834bf2005a75596d *inst/doc/speed.R
 07d5b2c59f9d21b803233c1d12969cab *inst/doc/speed.Rnw
-7abe65c13cb80a47394d6328300e2164 *inst/doc/speed.pdf
+20738aeeaeeda908f8a57b615a343a2f *inst/doc/speed.pdf
 260cb4b53a6fa44d2dcd4ca7e4fe42ed *inst/misc/CHANGELOG
 4eada30e1432a55caec633f6205713c2 *inst/misc/gen2.R
 933465340ee9e9885f093772644bc378 *inst/misc/index.html
@@ -87,7 +87,7 @@ bca6168d6e238ed77d118a1994509cbc *src/config.h.in
 95de9ee80a77ff9c10cbdec98f9d3018 *src/lfe-win.def
 71b073942fc86c4830f601bf928b0370 *src/lfe.c
 31156a3624f83f9dc233f78be69b9ca7 *src/lfe.h
-bacc408783182e406a285995a3fa8e41 *src/utils.c
+16e710366bc4d641a017cf68fcdf4555 *src/utils.c
 9e3937db7b8e33c980549932aae96a34 *tests/anomalies.R
 a95cd7a754b320769df70941f88283c9 *tests/anomalies.Rout.save
 776d197d197b36f519cfb4546c424b04 *tests/bctest.R
@@ -99,7 +99,7 @@ b4b3441c131534ac35fb00727c963746 *tests/cluster.Rout.save
 02de5687c55622795afdd3ee280cca75 *tests/comparelm.R
 78d6b02ab0169ae6838a54ebb20d7997 *tests/comparelm.Rout.save
 0448c8a5088a2f8e010dcc823c84d05f *tests/degenerate.R
-cc65bf3c4d7921c128e6b76f85b0560f *tests/degenerate.Rout.save
+c1eddcf6305ef390f3206b4c9ff88818 *tests/degenerate.Rout.save
 6e9fa46afc8d3426f15f3df10846b82c *tests/efcheck.R
 26029d0499226a873828c0f250717038 *tests/efcheck.Rout.save
 09b96b78faa90283abe4bbd811cb2290 *tests/fourfac.R
